# noxtest

./: README.md  noxfile.py  pyproject.toml  quote.py  setup.cfg  test_quote.py
.github/workflows/: ci.yml
