[tool.poetry]
name = "noxtest"
version = "0.1.0"
description = ""
authors = ["le_woudar <kevin.tewouda@gandi.net>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
nox = "^2022.8.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
respx = "^0.19.2"
bandit = "^1.7.4"
flake8 = "^5.0.4"
safety = "^2.1.1"
black = "^22.6.0"

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
